simple.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-svc
  labels:
    app: simple 
    service: simple
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
    protocol: TCP
  selector:
    app: simple
  #type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: simple
  labels:
    app: simple
    version: v1
spec:
  replicas: 5
  selector:
    matchLabels:
      app: simple
  template:
    metadata:
      labels:
        app: simple
        version: v1
    spec:
      containers:
      - name: simple
        image: ravo444/simple
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 8080
        #     scheme: HTTP
        # initialDelaySeconds: 180
