simple-nginx-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-nginx-ing
  labels:
    app: simple
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: simple-svc.default.svc.cluster.local
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /hostname
            backend:
              serviceName: simple-svc
              servicePort: 80
